# p2c

./: CMakeLists.txt  p2c.c
